[package]
name = "cs144"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
dns-lookup = "2.0.4"
env_logger = "0.10.1"
log = "0.4.20"
rand = "0.8.5"
url = "2.5.0"
